<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_champs">

    <fragment
        android:id="@+id/navigation_champs"
        android:name="com.example.android.gfhl.fragments.FragmentChampions"
        android:label="@string/champions"
        tools:layout="@layout/champion_list" />

    <fragment
        android:id="@+id/navigation_items"
        android:name="com.example.android.gfhl.fragments.FragmentItems"
        android:label="@string/items"
        tools:layout="@layout/item_list" />

    <fragment
        android:id="@+id/navigation_favs"
        android:name="com.example.android.gfhl.fragments.FragmentFavs"
        android:label="@string/favorites"
        tools:layout="@layout/champion_list" />
</navigation>