<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentChampions"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:fontFamily="@font/myfont"
            android:text="@string/favorites_champs"
            android:textSize="30sp"
            android:textColor="@color/gold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/no_connection"
                    android:padding="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/no_connection"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myfont"
                        android:text="@string/there_s_no_internet_connection"
                        android:textSize="20sp"
                        android:textColor="@color/gold"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/no_fav"
                    android:padding="8dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/no_fav"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/myfont"
                        android:text="@string/add_your_favorites_champions"
                        android:textSize="20sp"
                        android:textColor="@color/gold"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</FrameLayout>