<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/champNm"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/myfont"
            android:textSize="42sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:text="Champion Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/champPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="@string/hp"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/gold"
                    android:gravity="right"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:id="@+id/hpNum"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="100"
                    android:textSize="20sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="@string/mana"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/gold"
                    android:gravity="right"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:id="@+id/mpNum"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="20sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/myfont"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="@string/armor"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/gold"
                    android:gravity="right"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:id="@+id/armorNum"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="100"
                    android:textSize="20sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="@string/mr"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/gold"
                    android:gravity="right"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:id="@+id/mrNum"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"
                    android:text="100"
                    android:textSize="20sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/myfont"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:text="@string/dmg"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/gold"
                    android:gravity="right"
                    app:fontFamily="@font/myfont"/>
                <TextView
                    android:id="@+id/dmgNum"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:text="100"
                    android:textSize="20sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/myfont"/>
        </LinearLayout>

        <!-- Proyecto de Futuro
        <TextView
            android:layout_marginTop="16dp"
            android:fontFamily="@font/myfont"
            android:textSize="36sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:text="@string/last_skin_release" />

        <TextView
            android:id="@+id/skinName"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/myfont"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="Luna Sangirneta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/skinPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout> -->

    </LinearLayout>
</ScrollView>